--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Send your app metrics to InfluxDB",
     "require": {
          "php": ">=5.5",
-         "guzzlehttp/guzzle": "~4|~5|~6"
+         "guzzlehttp/guzzle": "~4|~5|~6|~7"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
